changes footer to add a script

--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
     </div>
 
     <footer>
-        <p>Copyright © Paulo Magno</p>
+        <p>Copyright © <script>
+                document.write(new Date().getFullYear())
+            </script> <a href="https://github.com/pgmagno">PGS Magno</a></p>
         <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
 
     </footer>
