--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>A Langing Page</title>
+    <title>A Landing Page</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
